--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "regenerator-runtime": "^0.13.7",
     "showdown": "^2.1.0",
     "urijs": "^1.19.11",
+    "office-addin-cli": "^1.5.4",
+    "office-addin-debugging": "^4.6.7"
+  },
+  "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.13.0",
@@ -58,7 +62,6 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "4.7.4"
   },
-  
   "prettier": "office-addin-prettier-config",
   "browserslist": [
     "ie 11"
