--- a/package.json
+++ b/package.json
@@ -32,7 +32,15 @@
     "showdown": "^2.1.0",
     "urijs": "^1.19.11",
     "office-addin-cli": "^1.5.4",
-    "office-addin-debugging": "^4.6.7"
+    "office-addin-debugging": "^4.6.7",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "4.7.4",
+    "process": "^0.11.10",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.7.4",
+    "babel-loader": "^8.2.2",
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
